Fixing responsive overflow

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -98,14 +98,14 @@ nav {
     position: absolute;
     top: 0;
     left: 0.1rem;
-    height: 2.2rem;
-    width: 2.2rem;
+    height: 95%;
+    width: 45%;
     transform: translateX(0);
     transition: transform 0.5s ease-in-out;
   }
 
   .dark-mode-checkbox:checked + .dark-mode-label .ball {
-    transform: translateX(2.4rem);
+    transform: translateX(100%);
   }
 }
 
