--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -12,7 +12,7 @@ main {
 
   & > section {
     width: 100%;
-    padding: 0 5rem;
+    padding: 0 2rem;
   }
 }
 .section-title {
@@ -25,13 +25,14 @@ main {
 }
 
 .carousel {
-  width: 40rem;
-  height: 60rem;
+  padding: 0;
+  width: 80vw;
+  height: 50%;
   margin-bottom: 20rem;
 
   img {
     width: 100%;
-    height: 60rem;
+    height: 80vw;
     object-fit: cover;
   }
 
@@ -118,7 +119,7 @@ main {
 
   .owner {
     @include flexCenter(column);
-    margin: 5rem;
+    margin-bottom: 5rem;
     img {
       border-radius: 3rem;
       width: 26rem;
@@ -144,7 +145,7 @@ main {
     & > p {
       font-weight: bold;
       margin-bottom: 2rem;
-      text-align: left;
+      text-align: center;
     }
   }
 
@@ -157,6 +158,11 @@ main {
 /*------------- Reponsive ---------*/
 //Tablet
 @media only screen and (min-width: map-get($breakpoints, tablet)) {
+  main {
+    & > section {
+      padding: 0 5rem;
+    }
+  }
   .carousel {
     width: 80vw;
     height: 40vw;
@@ -193,6 +199,10 @@ main {
     .description {
       width: 80%;
       line-height: 3.5rem;
+
+      & > p {
+        text-align: left;
+      }
     }
   }
 
@@ -215,6 +225,7 @@ main {
 
     .about-us {
       .owner {
+        margin: 5rem;
         img {
           width: 45rem;
         }
